<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="245dp"
    android:layout_height="320dp"
    android:layout_margin="16dp"
    android:background="@drawable/wowgamemenu"
    android:orientation="vertical">

    <Button
        android:id="@+id/menu_item3"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/show_distance"
        android:textColor="#d4bd61"
        android:textSize="13sp" />
    <Button
        android:id="@+id/menu_item1"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/load_map"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu_item0"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/info_button"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu_item2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/options"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu_item4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/relog"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu_item5"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/exit"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        android:layout_marginBottom="20dp"
        />
</LinearLayout>