<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="320dp"
    android:layout_margin="16dp"
    android:background="@drawable/wowgamemenu"
    android:orientation="vertical">

    <Button
        android:id="@+id/menu2_item1"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTintMode="add"
        android:gravity="center"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/clear_path"
        android:textColor="#d4bd61"
        android:textSize="13sp" />
    <Button
        android:id="@+id/menu2_item2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/show_path"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu2_item3"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/hide_path"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />

    <Button
        android:id="@+id/menu2_item4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#800101"
        android:gravity="center"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/save_path"
        android:textColor="#d4bd61"
        android:textSize="13sp" />
    <Button
        android:id="@+id/menu2_item5"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/Load_path"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
    <Button
        android:id="@+id/menu2_item6"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#a89c6a"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/delete_all_path"
        android:textColor="#d4bd61"
        android:gravity="center"
        android:textSize="13sp"
        />
</LinearLayout>